tests/sources/should-not-compile/repeat-missing-bracket.c
int x = 10;
int y = 0;

repeat x = x + 1;
until x > 10;
